--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <header class="header" id="top">
         <div class="container header-inner">
-            <h1 class="logo">M1racleScr1pt</h1>
+            <div class="logo-wrap">
+                <h1>M1racleScr1pt</h1>
+                <p>Personal cybersecurity blog</p>
+            </div>
             <nav class="nav" aria-label="Primary">
-                <a href="Home.html">Home</a>
+                <a href="#top">Home</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Research.html">Research</a>
                 <a href="Videos.html">Videos</a>
@@ -38,7 +41,7 @@
                     <h2>Exploring Ideas, Code, and Cybersecurity</h2>
                     <p>Miracle Omokaro shares notes from the SOC floor, lecture hall, and sketchbook — curated for builders and lifelong learners.</p>
                     <div class="hero-cta">
-                        <a class="btn btn-primary" href="#spotlight">Latest highlights</a>
+                        <a class="btn btn-primary" href="#latest-posts">Latest highlights</a>
                         <a class="btn btn-secondary" href="#contact">Let's connect</a>
                     </div>
                 </div>
@@ -246,7 +249,7 @@
                     <h3>Navigate</h3>
                     <ul>
                         <li><a href="#top">Back to top</a></li>
-                        <li><a href="#spotlight">Highlights</a></li>
+                        <li><a href="#latest-posts">Highlights</a></li>
                         <li><a href="Blog.html">Blog</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -309,35 +312,35 @@
             }
         };
 
-        const getPreferredTheme = () => {
-            const stored = storage.get(storageKey);
-            if (stored === 'dark' || stored === 'light') {
-                return stored;
-            }
-            return mediaQuery.matches ? 'dark' : 'light';
+        const getEffectiveTheme = (theme) => {
+            if (theme === 'auto') return mediaQuery.matches ? 'dark' : 'light';
+            return theme;
         };
 
         const applyTheme = (theme) => {
-            document.body.classList.toggle('dark-theme', theme === 'dark');
+            const effective = getEffectiveTheme(theme);
+            document.body.classList.toggle('dark-theme', effective === 'dark');
             toggle.setAttribute('data-theme', theme);
             const metaTheme = document.querySelector('meta[name="theme-color"]');
             if (metaTheme) {
-                metaTheme.setAttribute('content', theme === 'dark' ? '#010409' : '#ffffff');
+                metaTheme.setAttribute('content', effective === 'dark' ? '#010409' : '#ffffff');
             }
         };
 
-        applyTheme(getPreferredTheme());
+        const initialTheme = storage.get(storageKey) || 'auto';
+        applyTheme(initialTheme);
 
         toggle.addEventListener('click', () => {
-            const current = toggle.getAttribute('data-theme') === 'dark' ? 'dark' : 'light';
-            const next = current === 'dark' ? 'light' : 'dark';
+            const current = toggle.getAttribute('data-theme');
+            const next = current === 'auto' ? 'light' : current === 'light' ? 'dark' : 'auto';
             storage.set(storageKey, next);
             applyTheme(next);
         });
 
         const syncThemeFromSystem = (event) => {
-            if (!storage.has(storageKey)) {
-                applyTheme(event.matches ? 'dark' : 'light');
+            const current = toggle.getAttribute('data-theme');
+            if (current === 'auto') {
+                applyTheme('auto');
             }
         };
 
