--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <a href="Blog.html">Blog</a>
                 <a href="Research.html">Research</a>
                 <a href="Videos.html">Videos</a>
-                <a href="#contact">Contact</a>
             </nav>
             <button class="theme-toggle" type="button" aria-label="Toggle theme" data-theme="light">
                 <span class="icon-sun" aria-hidden="true">
@@ -30,8 +29,20 @@
                     <svg viewBox="0 0 24 24" role="img"><path d="M20.354 15.354A9 9 0 0 1 8.646 3.646 7.5 7.5 0 1 0 20.354 15.354Z"/></svg>
                 </span>
             </button>
+            <button class="hamburger" type="button" aria-label="Menu">
+                <svg viewBox="0 0 24 24" role="img"><path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z"/></svg>
+            </button>
         </div>
     </header>
+
+    <div class="nav-overlay">
+        <nav class="nav" aria-label="Primary">
+            <a href="#top">Home</a>
+            <a href="Blog.html">Blog</a>
+            <a href="Research.html">Research</a>
+            <a href="Videos.html">Videos</a>
+        </nav>
+    </div>
 
     <main>
         <section class="hero">
@@ -196,45 +207,6 @@
             </div>
         </section>
 
-        <section id="contact" class="section section-alt">
-            <div class="container">
-                <div class="section-heading center">
-                    <span class="eyebrow">Connect</span>
-                    <h2>Stay in sync</h2>
-                    <p>Follow the work, reach out for collaborations, or share a note.</p>
-                </div>
-                <div class="social-rail">
-                    <a class="social-card is-email" href="mailto:miracleomokaro55@gmail.com">
-                        <span class="social-icon" aria-hidden="true">
-                            <svg viewBox="0 0 24 24" role="img"><path d="M3 5h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Zm0 2v.217l9 5.4 9-5.4V7H3Zm18 10V9.383l-8.553 5.13a1 1 0 0 1-1.026 0L3 9.383V17h18Z"/></svg>
-                        </span>
-                        <span class="social-copy">
-                            <span class="social-label">Email</span>
-                            <span class="social-handle">miracleomokaro55@gmail.com</span>
-                        </span>
-                    </a>
-                    <a class="social-card is-github" href="https://github.com/m1raclescr1pt" target="_blank" rel="noopener">
-                        <span class="social-icon" aria-hidden="true">
-                            <svg viewBox="0 0 24 24" role="img"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.56v-2.02c-3.34.73-4.04-1.6-4.04-1.6-.53-1.34-1.29-1.7-1.29-1.7-1.05-.73.08-.72.08-.72 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.76.4-1.26.73-1.55-2.66-.31-5.47-1.34-5.47-5.95 0-1.32.47-2.4 1.24-3.24-.12-.3-.54-1.53.12-3.18 0 0 1.01-.32 3.3 1.23a11.39 11.39 0 0 1 6 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.88.12 3.18.77.84 1.23 1.92 1.23 3.24 0 4.62-2.82 5.63-5.5 5.93.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"/></svg>
-                        </span>
-                        <span class="social-copy">
-                            <span class="social-label">GitHub</span>
-                            <span class="social-handle">@m1raclescr1pt</span>
-                        </span>
-                    </a>
-                    <a class="social-card is-x" href="https://twitter.com/m1raclescr1pt" target="_blank" rel="noopener">
-                        <span class="social-icon" aria-hidden="true">
-                            <svg viewBox="0 0 24 24" role="img"><path d="M18.244 2.25h3.384l-7.39 8.427 8.68 11.073h-6.798l-4.237-5.632-4.843 5.632H3.654l7.835-9.112L3.12 2.25h6.953l3.825 5.111 4.346-5.111Z"/></svg>
-                        </span>
-                        <span class="social-copy">
-                            <span class="social-label">X (Twitter)</span>
-                            <span class="social-handle">@m1raclescr1pt</span>
-                        </span>
-                    </a>
-                </div>
-            </div>
-        </section>
-
 
     </main>
 
@@ -251,7 +223,6 @@
                         <li><a href="#top">Back to top</a></li>
                         <li><a href="#latest-posts">Highlights</a></li>
                         <li><a href="Blog.html">Blog</a></li>
-                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -286,8 +257,6 @@
         const toggle = document.querySelector('.theme-toggle');
         if (!toggle) return;
 
-        const mediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
-
         const storage = {
             get(key) {
                 try {
@@ -302,52 +271,40 @@
                 } catch (error) {
                     /* no-op when storage is blocked */
                 }
-            },
-            has(key) {
-                try {
-                    return window.localStorage.getItem(key) !== null;
-                } catch (error) {
-                    return false;
-                }
             }
-        };
-
-        const getEffectiveTheme = (theme) => {
-            if (theme === 'auto') return mediaQuery.matches ? 'dark' : 'light';
-            return theme;
         };
 
         const applyTheme = (theme) => {
-            const effective = getEffectiveTheme(theme);
-            document.body.classList.toggle('dark-theme', effective === 'dark');
+            document.body.classList.toggle('dark-theme', theme === 'dark');
             toggle.setAttribute('data-theme', theme);
             const metaTheme = document.querySelector('meta[name="theme-color"]');
             if (metaTheme) {
-                metaTheme.setAttribute('content', effective === 'dark' ? '#010409' : '#ffffff');
+                metaTheme.setAttribute('content', theme === 'dark' ? '#010409' : '#ffffff');
             }
         };
 
-        const initialTheme = storage.get(storageKey) || 'auto';
+        const initialTheme = storage.get(storageKey) || 'light';
         applyTheme(initialTheme);
 
         toggle.addEventListener('click', () => {
             const current = toggle.getAttribute('data-theme');
-            const next = current === 'auto' ? 'light' : current === 'light' ? 'dark' : 'auto';
+            const next = current === 'dark' ? 'light' : 'dark';
             storage.set(storageKey, next);
             applyTheme(next);
         });
 
-        const syncThemeFromSystem = (event) => {
-            const current = toggle.getAttribute('data-theme');
-            if (current === 'auto') {
-                applyTheme('auto');
-            }
-        };
+        const hamburger = document.querySelector('.hamburger');
+        const navOverlay = document.querySelector('.nav-overlay');
+        if (hamburger && navOverlay) {
+            hamburger.addEventListener('click', () => {
+                navOverlay.classList.toggle('open');
+            });
 
-        if (typeof mediaQuery.addEventListener === 'function') {
-            mediaQuery.addEventListener('change', syncThemeFromSystem);
-        } else if (typeof mediaQuery.addListener === 'function') {
-            mediaQuery.addListener(syncThemeFromSystem);
+            navOverlay.addEventListener('click', (e) => {
+                if (e.target === navOverlay) {
+                    navOverlay.classList.remove('open');
+                }
+            });
         }
     })();
     </script>
