Remove footer phrase; add pencil-draw CSS and small mobile header tweak

--- a/Research.html
+++ b/Research.html
@@ -138,7 +138,7 @@
                     <svg viewBox="0 0 24 24" role="img"><path d="M3 5h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Zm0 2v.217l9 5.4 9-5.4V7H3Zm18 10V9.383l-8.553 5.13a1 1 0 0 1-1.026 0L3 9.383V17h18Z"/></svg>
                 </a>
             </div>
-            <p>&copy; 2025 M1racleScr1pt. Crafted with curiosity in Ozoro, Delta State.</p>
+            <p>&copy; 2025 M1racleScr1pt.</p>
             <a class="inline-link" href="Contact.html">Collaborate -></a>
         </div>
     </footer>
