Redesign inspired by Gates Notes: new header nav, gradient backgrounds, cleaner footer, Miracles Script branding

--- a/Research.html
+++ b/Research.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
-    <title>Research - M1racleScr1pt</title>
+    <title>Research - Miracles Script</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
     <header class="header" id="top">
         <div class="container header-inner">
             <div class="logo-wrap">
-                <h1>M1racleScr1pt</h1>
+                <h1>Miracles Script</h1>
                 <p>Personal cybersecurity blog</p>
             </div>
             <nav class="nav" aria-label="Primary">
@@ -84,7 +84,7 @@
     <footer class="global-footer">
         <div class="container footer-top">
             <div class="footer-brand">
-                <h2 class="logo">M1racleScr1pt</h2>
+                <h2 class="logo">Miracles Script</h2>
                 <p>Personal blog of Miracle Omokaro — documenting the craft of cybersecurity, storytelling, and relentless curiosity.</p>
             </div>
             <div class="footer-links">
@@ -128,17 +128,17 @@
         </div>
         <div class="container footer-bottom">
             <div class="footer-social">
-                <a href="https://github.com/m1raclescr1pt" target="_blank" rel="noopener" aria-label="GitHub">
+                <a href="https://github.com/Miracles Script" target="_blank" rel="noopener" aria-label="GitHub">
                     <svg viewBox="0 0 24 24" role="img"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.56v-2.02c-3.34.73-4.04-1.6-4.04-1.6-.53-1.34-1.29-1.7-1.29-1.7-1.05-.73.08-.72.08-.72 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.76.4-1.26.73-1.55-2.66-.31-5.47-1.34-5.47-5.95 0-1.32.47-2.4 1.24-3.24-.12-.3-.54-1.53.12-3.18 0 0 1.01-.32 3.3 1.23a11.39 11.39 0 0 1 6 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.88.12 3.18.77.84 1.23 1.92 1.23 3.24 0 4.62-2.82 5.63-5.5 5.93.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"/></svg>
                 </a>
-                <a href="https://twitter.com/m1raclescr1pt" target="_blank" rel="noopener" aria-label="X (Twitter)">
+                <a href="https://twitter.com/Miracles Script" target="_blank" rel="noopener" aria-label="X (Twitter)">
                     <svg viewBox="0 0 24 24" role="img"><path d="M18.244 2.25h3.384l-7.39 8.427 8.68 11.073h-6.798l-4.237-5.632-4.843 5.632H3.654l7.835-9.112L3.12 2.25h6.953l3.825 5.111 4.346-5.111Z"/></svg>
                 </a>
                 <a href="mailto:miracleomokaro55@gmail.com" aria-label="Email">
                     <svg viewBox="0 0 24 24" role="img"><path d="M3 5h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Zm0 2v.217l9 5.4 9-5.4V7H3Zm18 10V9.383l-8.553 5.13a1 1 0 0 1-1.026 0L3 9.383V17h18Z"/></svg>
                 </a>
             </div>
-            <p>&copy; 2025 M1racleScr1pt.</p>
+            <p>&copy; 2025 Miracles Script.</p>
             <a class="inline-link" href="Contact.html">Collaborate -></a>
         </div>
     </footer>
