--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
-    <title>M1racleScr1pt</title>
+    <title>Miracles Script</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -13,14 +13,18 @@
     <header class="header" id="top">
         <div class="container header-inner">
             <div class="logo-wrap">
-                <h1>M1racleScr1pt</h1>
-                <p>Personal cybersecurity blog</p>
+                <h1>Miracles Script</h1>
+                <p>Cybersecurity & Technology Insights</p>
             </div>
             <nav class="nav" aria-label="Primary">
-                <a href="#top" aria-current="page">Home</a>
+                <a href="index.html" aria-current="page">Home</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Research.html">Research</a>
                 <a href="Videos.html">Videos</a>
+                <a href="Books.html">Books</a>
+                <a href="Podcast.html">Podcast</a>
+                <a href="About Me.html">About</a>
+                <a href="Contact.html">Contact</a>
             </nav>
             <div class="header-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme" data-theme="light">
@@ -40,10 +44,14 @@
 
     <div class="nav-overlay" role="dialog" aria-modal="true">
         <nav class="nav" aria-label="Mobile" id="mobile-nav">
-            <a href="#top" aria-current="page">Home</a>
+            <a href="index.html" aria-current="page">Home</a>
             <a href="Blog.html">Blog</a>
             <a href="Research.html">Research</a>
             <a href="Videos.html">Videos</a>
+            <a href="Books.html">Books</a>
+            <a href="Podcast.html">Podcast</a>
+            <a href="About Me.html">About</a>
+            <a href="Contact.html">Contact</a>
         </nav>
     </div>
 
@@ -51,19 +59,19 @@
         <section class="hero">
             <div class="container hero-layout">
                 <div class="hero-content" data-aos="fade-up" data-aos-delay="50">
-                    <span class="eyebrow">Cybersecurity · Creativity</span>
-                    <h2>Exploring Ideas, Code, and Cybersecurity</h2>
-                    <p>Miracle Omokaro shares notes from the SOC floor, lecture hall, and sketchbook — curated for builders and lifelong learners.</p>
+                    <span class="eyebrow">Welcome to Miracles Script</span>
+                    <h2>Exploring Cybersecurity, Technology & Innovation</h2>
+                    <p>Insights from the intersection of security, development, and creative problem-solving. Join me as I share discoveries, research, and practical knowledge for builders and lifelong learners.</p>
                     <div class="hero-cta">
-                        <a class="btn btn-primary" href="#latest-posts">Latest highlights</a>
-                        <a class="btn btn-secondary" href="#contact">Let's connect</a>
+                        <a class="btn btn-primary" href="#latest-posts">Explore Content</a>
+                        <a class="btn btn-secondary" href="About Me.html">About Me</a>
                     </div>
                     <svg id="pencil-draw" viewBox="0 0 400 200" xmlns="http://www.w3.org/2000/svg">
                         <path id="draw-path" d="M50 100 Q100 50 150 100 T250 100 Q300 150 350 100" stroke="#8B4513" stroke-width="2" fill="none"/>
                     </svg>
                 </div>
                 <div class="hero-image" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="anime.jpg" alt="Miracle Omokaro anime-inspired portrait" loading="lazy">
+                    <img src="anime.jpg" alt="Miracle Omokaro - Cybersecurity enthusiast and content creator" loading="lazy">
                 </div>
             </div>
         </section>
@@ -285,64 +293,61 @@
     </main>
 
     <footer class="global-footer">
-        <div class="container footer-top">
-            <div class="footer-brand">
-                <h2 class="logo">M1racleScr1pt</h2>
-                <p>Personal blog of Miracle Omokaro — documenting the craft of cybersecurity, storytelling, and relentless curiosity.</p>
+        <div class="container footer-inner">
+            <div class="footer-main">
+                <div class="footer-brand">
+                    <h2 class="logo">Miracles Script</h2>
+                    <p>Personal insights on cybersecurity, technology, and innovation. Exploring the digital frontier one discovery at a time.</p>
+                    <div class="footer-social">
+                        <a href="https://github.com/Miracles Script" target="_blank" rel="noopener" aria-label="GitHub">
+                            <svg viewBox="0 0 24 24" role="img"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.56v-2.02c-3.34.73-4.04-1.6-4.04-1.6-.53-1.34-1.29-1.7-1.29-1.7-1.05-.73.08-.72.08-.72 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.76.4-1.26.73-1.55-2.66-.31-5.47-1.34-5.47-5.95 0-1.32.47-2.4 1.24-3.24-.12-.3-.54-1.53.12-3.18 0 0 1.01-.32 3.3 1.23a11.39 11.39 0 0 1 6 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.88.12 3.18.77.84 1.23 1.92 1.23 3.24 0 4.62-2.82 5.63-5.5 5.93.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"/></svg>
+                        </a>
+                        <a href="https://twitter.com/Miracles Script" target="_blank" rel="noopener" aria-label="X (Twitter)">
+                            <svg viewBox="0 0 24 24" role="img"><path d="M18.244 2.25h3.384l-7.39 8.427 8.68 11.073h-6.798l-4.237-5.632-4.843 5.632H3.654l7.835-9.112L3.12 2.25h6.953l3.825 5.111 4.346-5.111Z"/></svg>
+                        </a>
+                        <a href="mailto:miracleomokaro55@gmail.com" aria-label="Email">
+                            <svg viewBox="0 0 24 24" role="img"><path d="M3 5h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Zm0 2v.217l9 5.4 9-5.4V7H3Zm18 10V9.383l-8.553 5.13a1 1 0 0 1-1.026 0L3 9.383V17h18Z"/></svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-nav">
+                    <div class="footer-section">
+                        <h3>Content</h3>
+                        <ul>
+                            <li><a href="Blog.html">Blog Posts</a></li>
+                            <li><a href="Research.html">Research</a></li>
+                            <li><a href="Videos.html">Videos</a></li>
+                            <li><a href="Books.html">Book Notes</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Community</h3>
+                        <ul>
+                            <li><a href="Podcast.html">Podcast</a></li>
+                            <li><a href="About Me.html">About</a></li>
+                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="Contact.html">Collaborate</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Connect</h3>
+                        <ul>
+                            <li><a href="https://github.com/Miracles Script" target="_blank">GitHub</a></li>
+                            <li><a href="https://twitter.com/Miracles Script" target="_blank">Twitter</a></li>
+                            <li><a href="mailto:miracleomokaro55@gmail.com">Email</a></li>
+                            <li><a href="Contact.html">Get in Touch</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-links">
-                <div class="footer-column">
-                    <h3>Product</h3>
-                    <ul>
-                        <li><a href="Blog.html">Blog</a></li>
-                        <li><a href="Research.html">Research</a></li>
-                        <li><a href="Videos.html">Videos</a></li>
-                        <li><a href="Books.html">Books</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Platform</h3>
-                    <ul>
-                        <li><a href="Podcast.html">Podcast</a></li>
-                        <li><a href="About Me.html">About</a></li>
-                        <li><a href="#top">Home</a></li>
-                        <li><a href="Contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Support</h3>
-                    <ul>
-                        <li><a href="mailto:miracleomokaro55@gmail.com">Help</a></li>
-                        <li><a href="Contact.html">Community</a></li>
-                        <li><a href="#latest-posts">Status</a></li>
-                        <li><a href="Contact.html">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Company</h3>
-                    <ul>
-                        <li><a href="About Me.html">About</a></li>
-                        <li><a href="Blog.html">Blog</a></li>
-                        <li><a href="Research.html">Careers</a></li>
-                        <li><a href="Contact.html">Press</a></li>
-                    </ul>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Miracles Script. All rights reserved.</p>
+                <div class="footer-links">
+                    <a href="About Me.html">About</a>
+                    <a href="Contact.html">Contact</a>
+                    <a href="#top">Back to Top</a>
                 </div>
             </div>
-        </div>
-        <div class="container footer-bottom">
-            <div class="footer-social">
-                <a href="https://github.com/m1raclescr1pt" target="_blank" rel="noopener" aria-label="GitHub">
-                    <svg viewBox="0 0 24 24" role="img"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.56v-2.02c-3.34.73-4.04-1.6-4.04-1.6-.53-1.34-1.29-1.7-1.29-1.7-1.05-.73.08-.72.08-.72 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.76.4-1.26.73-1.55-2.66-.31-5.47-1.34-5.47-5.95 0-1.32.47-2.4 1.24-3.24-.12-.3-.54-1.53.12-3.18 0 0 1.01-.32 3.3 1.23a11.39 11.39 0 0 1 6 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.88.12 3.18.77.84 1.23 1.92 1.23 3.24 0 4.62-2.82 5.63-5.5 5.93.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"/></svg>
-                </a>
-                <a href="https://twitter.com/m1raclescr1pt" target="_blank" rel="noopener" aria-label="X (Twitter)">
-                    <svg viewBox="0 0 24 24" role="img"><path d="M18.244 2.25h3.384l-7.39 8.427 8.68 11.073h-6.798l-4.237-5.632-4.843 5.632H3.654l7.835-9.112L3.12 2.25h6.953l3.825 5.111 4.346-5.111Z"/></svg>
-                </a>
-                <a href="mailto:miracleomokaro55@gmail.com" aria-label="Email">
-                    <svg viewBox="0 0 24 24" role="img"><path d="M3 5h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Zm0 2v.217l9 5.4 9-5.4V7H3Zm18 10V9.383l-8.553 5.13a1 1 0 0 1-1.026 0L3 9.383V17h18Z"/></svg>
-                </a>
-            </div>
-            <p>&copy; 2025 M1racleScr1pt.</p>
-            <a class="inline-link" href="Contact.html">Collaborate -></a>
         </div>
     </footer>
 
